@@ -1,3 +1,16 @@
+emitSetq schreibt beim letzten assignment immer clrValues
+-> isDefOrLet streichen, berechnung von isStmtExpr rausziehen und in emitSetq nutzen
+
+
+let-over-lambda (non-toplevel defuns) im compiler könnt so gehen:
+toplevelFormToJava bekommt ein case für let/let*/letrec, das sucht in diesen forms (rekursiv) nach defuns und bereitet ein CompilerGlobal vor
+emitForm schaut dann im pass 2 bei non-toplevel defuns im global environment nach obs das symbol gibt - wenn ja wird ein named lambda zugewiesen
+-> aufpassen falls das vor der zuweisung benutzt wird
+   -> sollte zumindest rt-fehler geben
+-> würd wsl. nicht nur für defun sondern auch define gehen, wär ggf sinnvoll
+-> zumindest multiple-value-bind wär auch gut
+
+
 vector (oder nur das was make-array ohne typ ausspuckt?) oder sollte make-array "dynamic" als typ akzeptieren?) koennte intelligenter sein:
 derzeit ists ein Object[] bzw. ArrayList<Object>
 -> denkbar waere, dass beim anlegen nix allokiert wird, und wenn z.B. als erstes element ein double daherkommt wird ein double[] allokiert,
