@@ -1731,7 +1731,8 @@ Murmel language:
 
 Compiler issues:
 
-- `define`/ `defun`/ `defmacro` only work as top level forms or within a `progn` form,
+- `define`/ `defun`/ `defmacro` only work as top level forms
+  or within `progn, let, let*, letrec` or `multiple-value-bind` forms,
   other use as non-toplevel form will throw a "not-yet-implemented" compiler error.
 - `define`-ing an already `define`-d symbol is not supported
 - `macroexpand-1` is limited to quoted forms
